add support for jdk16 and gradle 7.2